--- a/html/index.html
+++ b/html/index.html
@@ -48,11 +48,45 @@
   </head>
   <body>
     <!-- START Header Area -->
-    <header></header>
+    <header>
+      <h1>Logo</h1>
+      <nav>
+        <ul>
+          <a href="#"><li>list1</li></a>
+          <a href="#"><li>list2</li></a>
+          <a href="#"><li>list3</li></a>
+          <a href="#"><li>list4</li></a>
+          <a href="#"><li>list5</li></a>
+        </ul>
+      </nav>
+    </header>
     <!-- END Header Area -->
 
     <!-- START Main Area -->
-    <main></main>
+    <main>
+      <picture>
+        <img loading="lazy" src="画像URL" alt="メイン画像" />
+      </picture>
+      <section id="">
+        <div class="inner"></div>
+      </section>
+
+      <section id="">
+        <div class="inner"></div>
+      </section>
+
+      <section id="">
+        <div class="inner"></div>
+      </section>
+
+      <section id="">
+        <div class="inner"></div>
+      </section>
+
+      <section id="">
+        <div class="inner"></div>
+      </section>
+    </main>
     <!-- END Main Area -->
 
     <!-- START Footer Area -->
